reference/v5.0/PackageManagement/Import-PackageProvider.md
---
external help file: PSITPro5_OneGet.xml
online version: 
schema: 2.0.0
---

# Import-PackageProvider
## SYNOPSIS
Adds Package Management package providers to the current session.

## SYNTAX

```
Import-PackageProvider [-Name] <String[]> [-Force] [-ForceBootstrap] [-MaximumVersion <String>]
 [-MinimumVersion <String>] [-RequiredVersion <String>]
```

## DESCRIPTION
The Import-PackageProvider cmdlet adds one or more package providers to the current session.
The provider that you import must be installed on the local computer.

To get a list of available providers, run Get-PackageProvider -ListAvailable.
Note that a package provider name can be different from its module name.

Due to security reasons, PackageManagement requires C#-based providers to contain a provider.manifest.
For more information on how to build a provider with provider.manifest injected, see the .csproj project files on https://github.com/oneget/onegethttps://oneget.org.

## EXAMPLES

### Example 1: Import a package provider from the local computer
```
PS C:\>Import-PackageProvider -Name "Nuget"
```

This command imports the Nuget provider after it has been installed on the local computer.

### Example 2: Import a specific version of a package provider
```
PS C:\>Find-PackageProvider -Name "Nuget" -AllVersions
Install-PackageProvider -Name "Nuget" -RequiredVersion "2.8.5.201" -Force
Get-PackageProvider -ListAvailable
Import-PackageProvider -Name "Nuget" -RequiredVersion "2.8.5.201" -Verbose
```

This command finds, installs, and imports a specific version of the Nuget package provider.

## PARAMETERS

### -Force
Forces the command to run without asking for user confirmation.
Re-imports a package provider.

```yaml
Type: SwitchParameter
Parameter Sets: (All)
Aliases: 

Required: False
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### -ForceBootstrap
Indicates that this cmdlet forces Package Management to automatically install the package provider.

```yaml
Type: SwitchParameter
Parameter Sets: (All)
Aliases: 

Required: False
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### -MaximumVersion
Specifies the maximum allowed version of the package provider that you want to import.
If you do not add this parameter, Import-PackageProvider imports the highest available version of the provider.

```yaml
Type: String
Parameter Sets: (All)
Aliases: 

Required: False
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### -MinimumVersion
Specifies the minimum allowed version of the package provider that you want to import.
If you do not add this parameter, Import-PackageProvider imports the highest available version of the package that also satisfies any maximum version that is specified using the MaximumVersion parameter.

```yaml
Type: String
Parameter Sets: (All)
Aliases: 

Required: False
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### -Name
Specifies one or more package provider names.
Wildcards are not permitted.

```yaml
Type: String[]
Parameter Sets: (All)
Aliases: 

Required: True
Position: 1
Default value: None
Accept pipeline input: True(ByPropertyName)
Accept wildcard characters: False
```

### -RequiredVersion
Specifies the exact version of the package provider that you want to import.
If you do not add this parameter, Import-PackageProvider imports the highest available version of the provider that also satisfies any maximum version specified using the MaximumVersion parameter.

```yaml
Type: String
Parameter Sets: (All)
Aliases: 

Required: False
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

## INPUTS

### Microsoft.PackageManagement.Implementation.PackageProvider
You can pipe a PackageProvider object returned by Get-PackageProvider into Import-PackageProvider.

## OUTPUTS

## NOTES

## RELATED LINKS

[about_PackageManagement](http://technet.microsoft.com/library/dn927162.aspx)

[Find-PackageProvider](2e179dcb-d825-4329-b001-eb1579eceb67)

[Get-PackageSource](3fa76858-9e0b-4db6-b67d-f40702d41659)

[Register-PackageSource](02802b19-bd09-41b6-bd14-d310c0c732e1)

[Get-PackageProvider](b76e7285-804b-476a-a5d6-4d6ee4de0259)

